--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "abtest-util",
   "version": "0.0.1",
   "description": "A tiny ABTest utility library",
+  "repository": "https://github.com/Nikaple/abtest-util",
   "keywords": ["abtest", "util"],
   "author": "",
   "license": "MIT",
