--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "abtest-util",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A tiny ABTest utility library",
   "repository": "https://github.com/Nikaple/abtest-util",
-  "keywords": ["abtest", "util"],
+  "keywords": [
+    "abtest",
+    "util"
+  ],
   "author": "",
   "license": "MIT",
   "main": "dist/index.js",
@@ -24,12 +27,20 @@
     "typescript": "^2.7.2"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js", "json", "node"],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ],
     "transform": {
       "\\.ts$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.test\\.(ts|js)$",
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/**/*.ts", "!**/*.d.ts"]
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!**/*.d.ts"
+    ]
   }
 }
